@@ -1,3 +1,7 @@
+2007-06-04  8:55 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridmetric.c (gridSplitCost) compute new cost after edge split.
+
 2007-05-30 14:55 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridSmoothNodeARFaceSimplex) use simplex method to
